feat: add logout button and other changes

--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -67,7 +67,7 @@
     "contacts": {
       "title": "Ընկերության կոնտակտներ",
       "address": "Ընկերության հասցե",
-      "address_content": "Նաիրի Զարյան փող. 22ա, Երևան 0051",
+      "address_content": "Ք. Երևան, Սերո Խանզադյան փողոց 19/4",
       "phone": "Հեռախոս",
       "email": "Էլեկտրոնային փոստ",
       "social_media": "Սոցիալական ցանցեր"
@@ -255,12 +255,12 @@
       "title": "Domix-ի նվեր քարտ",
       "benefits": {
         "versatile_gift": "Սա կլինի հիանալի համընդհանուր նվեր նրանց համար, ովքեր կառուցում են, պլանավորում կամ վերանորոգում են։",
-        "online_use_only": "Նվեր քարտը կարող է օգտագործվել միայն shinmag.am կայքում ապրանքներ գնելու համար։",
-        "validity": "Քարտը գործում է 1 (մեկ) տարի ակտիվացումից հետո shinmag.am կայքի անձնական գրասենյակում։ Այս ժամկետը անցնելուց հետո նվեր քարտը կորցնում է գործողությունը, և քարտի մնացորդը չեղարկվում է։",
+        "online_use_only": "Նվեր քարտը կարող է օգտագործվել միայն Domix.am կայքում ապրանքներ գնելու համար։",
+        "validity": "Քարտը գործում է 1 (մեկ) տարի ակտիվացումից հետո Domix.am կայքի անձնական գրասենյակում։ Այս ժամկետը անցնելուց հետո նվեր քարտը կորցնում է գործողությունը, և քարտի մնացորդը չեղարկվում է։",
         "no_refund": "Քարտը չի կարող փոխանակվել կամ վերադարձվել, դրա համար վճարված գումարը չի վերադարձվում։ Եթե քարտը կորցվի կամ գողանա, դրա վրա մնացած գումարը չի վերականգնվի։",
         "remaining_balance": "Եթե ընտրված ապրանքի արժեքը պակաս է նվեր քարտի անվանման արժեքից, մնացորդը կթողնվի քարտի վրա՝ հետագա գնումների համար։",
         "additional_payment": "Եթե ընտրված ապրանքի արժեքը գերազանցում է նվեր քարտի անվանումը, տարբերությունը պետք է վճարի քարտը ներկայացնողը։",
-        "purchase_limits": "Նվեր քարտը կարելի է գնել shinmag.am կայքում՝ 10000-2000000 դրամ արժեքով։"
+        "purchase_limits": "Նվեր քարտը կարելի է գնել Domix.am կայքում՝ 10000-2000000 դրամ արժեքով։"
       },
       "actions": {
         "order": "Պատվիրել քարտ",
@@ -342,7 +342,7 @@
       "title": "Domix Կլուբ",
       "vacancie_banner": {
         "title": "Domix վարպետների կլուբը՝ յուրաքանչյուր մասնագետի երախտագիտություն",
-        "content": "Shinmag.am-ն հրավիրում է վերանորոգման եւ շինարարական մասնագետների թիմին։ Մասնագիտանում եք պատուհանների տատանումների, ջերմոցների կամ էլեկտրիկայի ոլորտներում կամ այլ շինարարական ծառայություններ մատուցում? Մասնակցեք մեր կլուբին եւ ստացեք առավելագույն օգուտներ:"
+        "content": "Domix.am-ն հրավիրում է վերանորոգման եւ շինարարական մասնագետների թիմին։ Մասնագիտանում եք պատուհանների տատանումների, ջերմոցների կամ էլեկտրիկայի ոլորտներում կամ այլ շինարարական ծառայություններ մատուցում? Մասնակցեք մեր կլուբին եւ ստացեք առավելագույն օգուտներ:"
       },
       "reasons_cards": {
         "title": "3 պատճառ մասնակցելու համար",
@@ -463,7 +463,8 @@
       "email_label": "Էլ. փոստ",
       "password_label": "Գաղտնաբառ",
       "edit_button": "Խմբագրել",
-      "delete_button": "Ջնջել էջը"
+      "delete_button": "Ջնջել էջը",
+      "logout_button": "Դուրս գալ անձնական կաբինետից"
     },
     "my_addresses": {
       "title": "Իմ հասցեները",
@@ -634,7 +635,7 @@
     "regular_customer": "Մշտական հաճախորդ",
     "shares": "Ակցիաներ",
     "for_business": "Բիզնեսի համար",
-    "vacancies": "Աշխատանք",
+    "vacancies": "Domix Club",
     "profile": "Պրոֆիլ",
     "cart": "Զամբյուղ",
     "payment": "Վճարում",
