--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -67,7 +67,7 @@
     "contacts": {
       "title": "Контакты компании",
       "address": "Адрес компании",
-      "address_content": "ул. Наири Заряна 22а, Ереван 0051",
+      "address_content": "г.Ереван ул.Серо Ханзадяна 19/4",
       "phone": "Телефон",
       "email": "Электронная почта",
       "social_media": "Социальные сети"
@@ -256,8 +256,8 @@
       "title": "Подарочная карта Domix",
       "benefits": {
         "versatile_gift": "Это будет отличный универсальный подарок для тех, кто строит, планирует или делает ремонт!",
-        "online_use_only": "Подарочная карта может быть использована только для приобретения товаров на сайте shinmag.am.",
-        "validity": "Карта действительна в течение 1 (одного) года с момента активации в личном кабинете сайта shinmag.am. По истечению данного срока Подарочная карта становится недействительной, положительный баланс по карте аннулируется.",
+        "online_use_only": "Подарочная карта может быть использована только для приобретения товаров на сайте Domix.am.",
+        "validity": "Карта действительна в течение 1 (одного) года с момента активации в личном кабинете сайта Domix.am. По истечению данного срока Подарочная карта становится недействительной, положительный баланс по карте аннулируется.",
         "no_refund": "Карта обмену и возврату не подлежит, уплаченные за нее денежные средства не возвращаются. При утере или краже карты, денежные средства, находящиеся на ее балансе, не восстанавливаются.",
         "remaining_balance": "В случае, если стоимость выбранного товара из ассортимента магазина менее номинала Подарочной карты, остаток денежных средств остается на карте для дальнейших покупок.",
         "additional_payment": "В случае, если стоимость выбранного товара из ассортимента магазина больше номинала Подарочной карты, то разница выплачивается предъявителем карты.",
@@ -343,7 +343,7 @@
       "title": "Domix Клуб",
       "vacancie_banner": {
         "title": "Клуб Мастеров Domix – это рай для любого профессионала.",
-        "content": "Shinmag.am приглашает в клуб специалистов по ремонту и строительству. Занимаетесь отделочными работами, сантехникой, электрикой или оказываете другие строительные услуги? Присоединяйтесь к участникам клуба и получайте максимальную выгоду!"
+        "content": "Domix.am приглашает в клуб специалистов по ремонту и строительству. Занимаетесь отделочными работами, сантехникой, электрикой или оказываете другие строительные услуги? Присоединяйтесь к участникам клуба и получайте максимальную выгоду!"
       },
       "reasons_cards": {
         "title": "3 причины стать участником",
@@ -464,7 +464,8 @@
       "email_label": "Эл. адрес",
       "password_label": "Пароль",
       "edit_button": "Редактировать",
-      "delete_button": "Удалить страницу"
+      "delete_button": "Удалить страницу",
+      "logout_button": "Выйти из личного кабинета"
     },
     "my_addresses": {
       "title": "Мои адреса",
@@ -635,7 +636,7 @@
     "regular_customer": "Постоянный клиент",
     "shares": "Акции",
     "for_business": "Для бизнеса",
-    "vacancies": "Вакансии",
+    "vacancies": "Domix Club",
     "profile": "Профиль",
     "cart": "Корзина",
     "payment": "Оплата",
