refactor: change text content

--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -7,7 +7,7 @@
       "shares": "Ակցիաներ",
       "cooperation": "Համագործակցություն",
       "for_business": "Բիզնեսի համար",
-      "vacancies": "Թափուր պաշտոններ",
+      "vacancies": "Domix Club",
       "about_us": "Մեր մասին",
       "contacts": "Կապ",
       "personal_account": "Անձնական հաշիվ"
@@ -35,7 +35,7 @@
     "promotions": "Ակցիաներ",
     "cooperation": "Համագործակցություն",
     "for_business": "Բիզնեսի համար",
-    "vacancies": "Թափուր պաշտոններ",
+    "vacancies": "Domix Club",
     "about_us": "Մեր մասին",
     "contacts": "Կապ",
     "privacy_policy": "Գաղտնիության քաղաքականություն",
