--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -7,7 +7,7 @@
       "shares": "Акции",
       "cooperation": "Сотрудничество",
       "for_business": "Для бизнеса",
-      "vacancies": "Вакансии",
+      "vacancies": "Domix Club",
       "about_us": "О нас",
       "contacts": "Контакты",
       "personal_account": "Личный кабинет"
@@ -35,7 +35,7 @@
     "promotions": "Акции",
     "cooperation": "Сотрудничество",
     "for_business": "Для бизнеса",
-    "vacancies": "Вакансии",
+    "vacancies": "Domix Club",
     "about_us": "О нас",
     "contacts": "Контакты",
     "privacy_policy": "Политика конфиденциальности",
