--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -556,6 +556,7 @@
   "payment": {
     "title": "Оплата",
     "price": "Цена",
+    "discount": "Скидка",
     "delivery": "Доставка",
     "total": "Сумма",
     "orderButton": "Заказать",
