feat: add styles changes

--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -42,7 +42,7 @@
     "phone": "Հեռախոս:",
     "working_hours": "Աշխատանքային ժամեր:",
     "working_hours_value": "09:00-ից մինչև 22:00 ամեն օր",
-    "design_and_development": "Դիզայն և մշակում: Web-space.by"
+    "design_and_development": "Դիզայն և մշակում:"
   },
   "feedback_form": {
     "title": "Կապ մեզ հետ",
