--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -42,7 +42,7 @@
     "phone": "Телефон:",
     "working_hours": "Время работы:",
     "working_hours_value": "с 09:00 до 22:00 ежедневно",
-    "design_and_development": "Дизайн и разработка: Web-space.by"
+    "design_and_development": "Дизайн и разработка:"
   },
   "feedback_form": {
     "title": "Связаться с нами",
