feat: add styles

--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -231,7 +231,10 @@
     "title": "Հաճախորդը մշտական",
     "navigation": {
       "info": "Տեղեկատվություն մշտական հաճախորդների համար",
-      "gift_cards": "Հավաստագրեր"
+      "gift_cards": "Հավաստագրեր",
+      "return_product": "Վերադարձ",
+      "privacy_policy": "Գաղտնիության քաղաքականություն",
+      "exchange": "Փոխանակում"
     },
     "info_regular_customer": {
       "title": "Կուտակային զեղչային համակարգ և անվճար առաքում",
@@ -273,6 +276,46 @@
         "send": "Ուղարկել"
       },
       "activate": "Ակտիվացնել"
+    },
+    "return_product": {
+      "title": "Ապրանքի վերադարձ",
+      "paragraphs": {
+        "p1": "Գնորդը կամ ստացողը, որին մատակարարվել է ոչ պատշաճ որակի ապրանք, եթե դա համաձայնեցված չէ վաճառողի հետ, իրավունք ունի ըստ իր հայեցողության պահանջել՝",
+        "p2": "Գնորդը կամ ստացողը իրավունք չունի վերադարձնել պատշաճ որակի ապրանքը՝ համաձայն չսննդային ապրանքների ցանկի, որոնք ենթակա են փոխանակման և վերադարձի՝ ըստ Հայաստանի Հանրապետության կառավարության որոշման:",
+        "p3": "Վաճառքից հետո պատշաճ որակի ապրանքը հնարավոր է վերադարձնել 45 (քառասունհինգ) օրվա ընթացքում: Սա լրացուցիչ երաշխիք է, որը գերազանցում է ՀՀ օրենսդրության նորմատիվ ակտերի դրույթները վերադարձի վերաբերյալ:",
+        "p4": "Տեխնիկան չի ենթարկվում փոխանակման կամ վերադարձի, եթե գնորդը պարզապես փոխել է իր կարծիքը:",
+        "p5": "Պատշաճ որակի ապրանքի վերադարձը հնարավոր է, եթե պահպանված է ապրանքի փաթեթավորումը, սպառողական հատկությունները և ներկայացվում է ապրանքը ձեռք բերելու փաստն ու պայմանները հաստատող փաստաթուղթ: Ըստ օրենսդրության՝ օգտագործված ապրանքների վերադարձը հնարավոր չէ:",
+        "p6": "Եթե ապրանքը վերադարձվում է գնումից հետո 14 (տասնչորս) օրվա ընթացքում, գնորդին վերադարձվում է ապրանքի ամբողջ արժեքը: Եթե ապրանքը վերադարձվում է 15-45 օրվա ընթացքում, գնորդը կարող է այն փոխանակել այլ ապրանքի հետ (նույն գնով կամ հավելավճարով): Այս դեպքում վաճառողը կարող է մերժել ապրանքի վերադարձը, եթե դրա պահպանման ժամկետը մոտենում է:",
+        "p7": "Եթե ապրանքը վերադարձվում է վաճառողի տրանսպորտով, գնորդը վճարում է 5000 դրամ փոխադրամիջոցների ծախս՝ Երևանի տարածքում: Նոր պատվերի ձևակերպման և նախորդ պատվերի վերադարձի միաժամանակյա դեպքում գնորդը վճարում է հավելյալ 2500 ՀՀ դրամ միջնորդավճար:"
+      },
+      "list": {
+        "l1": "Ոչ պատշաճ որակի ապրանքի փոխանակում պատշաճ որակի ապրանքով;",
+        "l2": "Ապրանքի գնման գնի համաչափ նվազեցում;",
+        "l3": "Ապրանքի թերությունների անհապաղ և անվճար վերացում;",
+        "l4": "Ապրանքի թերությունների վերացման ծախսերի փոխհատուցում;",
+        "l5": "Գնորդի կողմից վաճառքի պայմանագրի չեղարկում և ապրանքի համար վճարված գումարի վերադարձ պահանջելու իրավունք: Ապրանքը մատակարարին վերադարձնելու դեպքում գնորդը պարտավոր է պահպանել փաթեթավորման և վերադարձվող ապրանքի ամբողջականության պահանջները:"
+      }
+    },
+    "exchange": {
+      "title": "Ապրանքի որակը և ապրանքի փոխարինումը",
+      "text": {
+        "main": "Մեր կայքից գնված ապրանքը կարելի է վերադարձնել կամ փոխարինել այլ չափի, ձևի, գույնի կամ համանման կոմպլեկտայնության ապրանքով՝ գնի տարբերության դեպքում անհրաժեշտ վերահաշվարկ կատարելով: Պատշաճ որակի ապրանքը փոխարինվում է,",
+        "strong": "եթե նշված ապրանքը չի օգտագործվել, պահպանված են դրա ապրանքատեսքը, սպառողական հատկանիշները, ապրանքային պիտակները, ինչպես նաև սպառողին տրված վճարման փաստը հավաստող փաստաթուղթը կամ այլ հաշվարկային փաստաթուղթ, և առկա են ապրանքը հենց այդ վաճառողից ձեռք բերելու մասին ապացույցներ:"
+      }
+    },
+    "privacy_policy": {
+      "p1": "Shinmag-ը մշակել է այս գաղտնիության քաղաքականությունը՝ օգնելու նրանց, ովքեր մտահոգված են իրենց «Անձնական տվյալների» օգտագործմամբ այս կայքում:",
+      "p2": "Խնդրում ենք ուշադիր կարդալ մեր գաղտնիության քաղաքականությունը՝ հասկանալու համար, թե ինչպես ենք մենք հավաքում, օգտագործում և պաշտպանում ձեր տվյալները մեր կայքում:",
+      "h1": "1. Ի՞նչ անձնական տվյալներ ենք մենք հավաքում։",
+      "p3": "Մենք հավաքում ենք անձնական տվյալներ՝ ներառյալ ձեր անունը, հասցեն, էլ. հասցեն և հեռախոսահամարը։ Ձեր կողմից տրամադրված բանկային քարտի տվյալները կպահպանվեն գաղտնի։ Սակայն քարտի անվտանգության քաղաքականության համար պատասխանատվությունն ընկած է այն թողարկած բանկի վրա։",
+      "h2": "2. Ինչու՞ ենք մենք հավաքում ձեր տեղեկատվությունը։",
+      "p4": "Մենք հավաքում ենք անձնական տվյալներ՝ ձեզ անհրաժեշտ ապրանքներն ու ծառայությունները մատուցելու համար, ինչպես նաև ձեզ տեղեկատվություն տրամադրելու մեր առաջարկների և զեղչերի մասին։",
+      "h3": "3. Ինչպե՞ս ենք մենք հավաքում ձեր տեղեկատվությունը։",
+      "p5": "Մենք ստանում ենք ձեր անձնական տվյալները հենց ձեզնից, երբ դրանք տրամադրում եք կայքում գրանցվելիս կամ պատվեր կատարելիս Shinmag ապրանքների համար։",
+      "h4": "4. Ինչպե՞ս ենք մենք պաշտպանում ձեր տվյալները։",
+      "p6": "Մենք մեր կայքում կիրառում ենք SSL վկայագիր՝ բարձր գաղտնիություն ապահովելու համար։ Այս անվտանգության տեխնոլոգիան կոդավորում է համացանցով փոխանցվող բոլոր տվյալները, ինչը նշանակում է, որ ձեր տրամադրած տեղեկությունները մնում են գաղտնի։",
+      "h5": "5. Անձնական տվյալների ջնջման իրավունք։",
+      "p7": "Դուք իրավունք ունեք ցանկացած պահին պահանջել ձեր անձնական տվյալների ջնջումը։ Ձեր հարցումը ստանալուց և հաստատելուց հետո՝ ձեր տրամադրած բոլոր տվյալները կջնջվեն մեր գրառումներից։"
     }
   },
   "cooperation": {
