--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -232,7 +232,10 @@
     "title": "Постоянный клиент",
     "navigation": {
       "info": "Информация для постоянных клиентов",
-      "gift_cards": "Подарочные карты"
+      "gift_cards": "Подарочные карты",
+      "return_product": "Возврат",
+      "privacy_policy": "Политика конфиденциальности",
+      "exchange": "Обмен"
     },
     "info_regular_customer": {
       "title": "Накопительная система скидок и бесплатная доставка",
@@ -274,6 +277,46 @@
         "send": "Отправить"
       },
       "activate": "Активировать"
+    },
+    "return_product": {
+      "title": "Возврат товара",
+      "paragraphs": {
+        "p1": "Покупатель или получатель, которым был реализован товар ненадлежащего качества, если это не согласовано с продавцом, вправе по своему выбору потребовать:",
+        "p2": "Покупатель или получатель не имеет права на возврат товара надлежащего качества, согласно перечню непродовольственных товаров, подлежащих обмену и возврату, утвержденному постановлением Правительства Республики Армения.",
+        "p3": "После продажи возврат качественного товара возможен в течение 45 (сорока пяти) дней. Это дополнительная гарантия, выходящая за рамки положений нормативных актов РА о возврате.",
+        "p4": "Техника не подлежит обмену или возврату, если покупатель просто передумал.",
+        "p5": "Возврат товара надлежащего качества возможен при сохранении упаковки товара, потребительских свойств и предъявлении продавцу документа, подтверждающего факт и условия приобретения товара. Согласно законодательству возврат товаров, бывших в употреблении, невозможен.",
+        "p6": "Если товар возвращается в течение 14 (четырнадцати) дней с момента покупки, покупателю возвращается полная стоимость товара. При возврате товара в течение 15-45 дней с момента покупки покупатель может обменять лишний товар на другой товар (по той же цене или с доплатой). В этом случае продавец может отказать в возврате товара, если срок его годности близок.",
+        "p7": "При возврате товара транспортом продавца покупатель оплачивает транспортные расходы в размере 5000 драм в районе Еревана. В случае одновременного оформления нового заказа и возврата предыдущего заказа покупатель оплачивает дополнительную комиссию в размере 2500 драмов РА."
+      },
+      "list": {
+        "l1": "Обмен некачественной продукции на продукцию хорошего качества;",
+        "l2": "Соразмерное снижение покупной цены товара;",
+        "l3": "Немедленное и бесплатное устранение дефектов продукции;",
+        "l4": "Возмещение затрат на устранение недостатков товара;",
+        "l5": "Расторгнуть договор купли-продажи и потребовать возврата денег, уплаченных за товар. При возврате товара поставщику покупатель обязан соблюдать требования к упаковке и целостности возвращаемого товара."
+      }
+    },
+    "exchange": {
+      "title": "Качество товара и обмен товара",
+      "text": {
+        "main": "Товар, купленный на нашем сайте, можно вернуть или обменять на товар другого размера, формы, цвета или аналогичной комплектации, с соответствующим перерасчётом в случае разницы в цене. Товар надлежащего качества подлежит обмену,",
+        "strong": "если он не использовался, сохранены его товарный вид, потребительские свойства, товарные ярлыки, а также документ, подтверждающий оплату или иной расчётный документ, и имеются доказательства приобретения товара именно у этого продавца."
+      }
+    },
+    "privacy_policy": {
+      "p1": "Shinmag разработала эту политику конфиденциальности, чтобы помочь тем, кто обеспокоен тем, как Shinmag использует их «Личные данные» на этом веб-сайте.",
+      "p2": "Пожалуйста, внимательно прочитайте нашу политику конфиденциальности, чтобы понять, как мы собираем, используем и защищаем ваши данные на нашем веб-сайте.",
+      "h1": "1. Какую личную информацию мы собираем?",
+      "p3": "Мы собираем личные данные, включая ваше имя, адрес, адрес электронной почты и номер телефона. Предоставленная Вами информация о кредитной карте будет храниться конфиденциально. Однако ответственность и регулирование политики безопасности карты принадлежит банку, который выдал Вам эту карту.",
+      "h2": "2. Почему мы собираем Вашу информацию?",
+      "p4": "Мы собираем персональные данные, для того, чтобы предоставить Вам запрошенные продукты и услуги, а также проинформировать о продуктах и скидках по мере необходимости.",
+      "h3": "3. Как мы собираем Вашу информацию?",
+      "p5": "Мы получаем персональные данные непосредственно от Вас, когда Вы предоставляете их нам, регистрируясь на сайте или оформляя заказ на продукцию Shinmag.",
+      "h4": "4. Как мы защищаем Вашу информацию?",
+      "p6": "Для обеспечения высокой конфиденциальности мы внедряем SSL-сертификат на нашем веб-сайте. Эта технология безопасности шифрует все конфиденциальные данные, передаваемые через Интернет. Это означает, что предоставленная Вами информация сохраняется конфиденциально.",
+      "h5": "5. Право на удаление персональных данных.",
+      "p7": "Вы имеете право запросить удаление вашей личной информации в любое время. Как только мы получим и подтвердим ваш запрос, все предоставленные вами данные будут удалены из нашей записи."
     }
   },
   "cooperation": {
