feat: add translations

--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -153,16 +153,16 @@
       "description": "Մենք ընդունում ենք կայքի միջոցով վճարումներ հետևյալ բանկային քարտերով։"
     },
     "terms_of_service": {
-      "title": "Условия предоставления услуг",
-      "delivery_info": "В услугу доставки (кроме курьерской) не входит разгрузка (выгрузка из автомобиля), подъем и пронос товара — это отдельные услуги.",
+      "title": "Ծառայությունների մատուցման պայմաններ",
+      "delivery_info": "Առաքման ծառայության մեջ (բացի կուրյերական առաքումից) չի ներառվում բեռնաթափումը (մեքենայից ապրանքների հանումը), բարձրացումը և տեղափոխումը - դրանք առանձին ծառայություններ են:",
       "delivery_rules": {
-        "rule1": "Доставка осуществляется после того, как Вы подтвердите готовность получить товар. В день доставки просим оставаться на связи по указанному в заказе номеру телефона.",
-        "rule2": "Отправляясь на адрес, водитель обязательно Вам позвонит, если вы выбрали любой вид доставки, кроме «Экспресс», которая гарантирует своевременную доставку в выбранном интервале.",
-        "rule3": "Если Вы выбрали доставку «Экспресс», машина прибудет на адрес даже без предварительного подтверждения заказа по телефону.",
-        "rule4": "Вы можете перенести время доставки или скорректировать заказ, обратившись в Контакт-центр по номеру 012440440.",
-        "rule5": "Если подъезд к месту разгрузки затруднен, то машина остановится на максимально близком от него расстоянии, не нарушая ПДД и исключая вероятность повреждения транспорта. Для разгрузки автомобиля весом до 1,8 тонн включительно отводится 30 минут, весом свыше 1,8 тонн – 60 минут.",
-        "rule6": "Оплатить доставку можно заранее любым удобным способом (на сайте, по телефону), а также на месте наличными или банковской картой до начала момента разгрузки.",
-        "rule7": "Если возникли вопросы по качеству или количеству товара, Вы можете обратиться к представителю компании на месте или в Службу поддержки клиентов по телефону 012440440. Номер телефона также указан в товарном чеке."
+        "rule1": "Առաքումը կատարվում է այն բանից հետո, երբ Դուք հաստատեք ապրանքը ստանալու պատրաստակամությունը: Առաքման օրը խնդրում ենք մնալ կապի մեջ պատվերում նշված հեռախոսահամարով:",
+        "rule2": "Հասցե մեկնելիս, վարորդը անպայման կզանգի Ձեզ, եթե Դուք ընտրել եք ցանկացած տեսակի առաքում, բացառությամբ «Էքսպրես»-ի, որը երաշխավորում է առաքումը ընտրված ժամանակահատվածում:",
+        "rule3": "Եթե Դուք ընտրել եք «Էքսպրես» առաքումը, մեքենան կհասնի հասցեին նույնիսկ առանց պատվերի նախնական հաստատման հեռախոսով:",
+        "rule4": "Դուք կարող եք փոխել առաքման ժամը կամ ճշգրտել պատվերը՝ դիմելով Կոնտակտային կենտրոն 012440440 հեռախոսահամարով:",
+        "rule5": "Եթե բեռնաթափման վայր մոտենալը դժվար է, ապա մեքենան կկանգնի դրանից առավելագույնս մոտ հեռավորության վրա՝ չխախտելով Ճանապարհային կանոնները և բացառելով տրանսպորտային միջոցի վնասման հավանականությունը: Մինչև 1,8 տոննա քաշով մեքենայի բեռնաթափման համար տրամադրվում է 30 րոպե, 1,8 տոննայից ավելի քաշի դեպքում՝ 60 րոպե:",
+        "rule6": "Առաքման վճարումը կարող է կատարվել նախապես ցանկացած հարմար եղանակով (կայքում, հեռախոսով), ինչպես նաև վայրում՝ կանխիկ կամ բանկային քարտով, մինչև բեռնաթափումը սկսելը:",
+        "rule7": "Եթե հարցեր կան ապրանքի որակի կամ քանակի վերաբերյալ, Դուք կարող եք դիմել ընկերության ներկայացուցչին վայրում կամ Հաճախորդների աջակցության ծառայությանը 012440440 հեռախոսահամարով: Հեռախոսահամարը նշված է նաև ապրանքային չեկում:"
       },
       "service_cost": {
         "title": "Ծառայության արժեքը",
@@ -170,7 +170,7 @@
         "info2": "Ապրանքի բեռնաթափման, այն ներս բերելու և բարձրացման ծառայությունները վճարվում են առանձին։"
       },
       "features": {
-        "title": "Особенности",
+        "title": "Հատկանիշներ",
         "info": "«Ուղարկիչ առաքման» պատվերի ընդհանուր քաշը չի կարող գերազանցել 10 կգ, իսկ չափերը՝ 110x45x30 սմ։ Բարձրացման արժեքը ներառված է առաքման արժեքում։"
       }
     },
@@ -507,7 +507,19 @@
       "password_label": "Գաղտնաբառ",
       "edit_button": "Խմբագրել",
       "delete_button": "Ջնջել էջը",
-      "logout_button": "Դուրս գալ անձնական կաբինետից"
+      "logout_button": "Դուրս գալ անձնական կաբինետից",
+      "changes_saved": "Փոփոխությունները պահպանված են",
+      "error": "Սխալ",
+      "confirm_delete_user": "Վստահ եք, որ ցանկանում եք ջնջել օգտագործողին?",
+      "edit_password": {
+        "title": "Գաղտնաբառի խմբագրում",
+        "current_password": "Ընթացիկ գաղտնաբառ",
+        "new_password": "Նոր գաղտնաբառ",
+        "confirm_new_password": "Հաստատել նոր գաղտնաբառը",
+        "save_button": "Պահպանել",
+        "success_message": "Գաղտնաբառը հաջողությամբ փոխվեց",
+        "error_message": "Գաղտնաբառի փոփոխության սխալ"
+      }
     },
     "my_addresses": {
       "title": "Իմ հասցեները",
@@ -659,7 +671,27 @@
     "add_in_favorite_error_description": "Խնդրում ենք փորձել կրկին",
     "delete_from_favorite": "Ապրանքը հեռացվել է նախընտրելիներից",
     "delete_from_favorite_error": "Ապրանքը չի հեռացվել նախընտրելիներից",
-    "delete_from_favorite_error_description": "Խնդրում ենք փորձել կրկին"
+    "delete_from_favorite_error_description": "Խնդրում ենք փորձել կրկին",
+    "promotion": "Ակցիա",
+    "new": "Նորույթ",
+    "popular": "Հանրաճանաչ"
+  },
+  "product": {
+    "product_code": "Ապրանքի կոդ",
+    "similar_products": "Նմանատիպ ապրանքներ",
+    "promotion": "Ակցիա",
+    "new": "Նորույթ",
+    "popular": "Հանրաճանաչ",
+    "brand": "Ապրանքանիշ",
+    "add_to_cart": "Զամբյուղ ավելացնել",
+    "request_discount": "Զեղչի հարցում",
+    "added_to_cart": "Ավելացվեց զամբյուղում",
+    "error": "Սխալ",
+    "removed_from_favorites": "Հանվեց ընտրյալներից",
+    "added_to_favorites": "Ավելացվեց ընտրյալներում",
+    "description": "Նկարագրություն",
+    "delivery_info": "Առաքման տեղեկատվություն",
+    "lifting_info": "Վերելակի տեղեկատվություն"
   },
   "callback_popup": {
     "title": "Հետադարձ զանգ",
@@ -684,5 +716,9 @@
     "cart": "Զամբյուղ",
     "payment": "Վճարում",
     "catalog": "Կատալոգ"
+  },
+  "confirm_modal": {
+    "yes": "Այո",
+    "no": "Ոչ"
   }
 }
