feat: add translations in seccess order page

--- a/src/locales/hy.json
+++ b/src/locales/hy.json
@@ -752,5 +752,14 @@
       "success_message": "Գրանցումն հաջողությամբ կատարվեց",
       "error_message": "Գրանցման սխալ"
     }
+  },
+  "orderSuccess": {
+    "successTitle": "Ձեր պատվերը ձևակերպված է։",
+    "orderNumber": "Ձեր պատվերի համարը՝",
+    "managerWillCall": "Մեր մենեջերը շուտով կկապվի ձեզ հետ պատվերը հաստատելու համար։",
+    "managerWillCallError": "Մեր մենեջերը շուտով կկապվի ձեզ հետ մանրամասները ճշգրտելու համար։",
+    "errorTitle": "Վայ, ինչ-որ բան այնպես չգնաց։",
+    "ordersBtn": "Պատվերներ",
+    "homeBtn": "Վերադառնալ գլխավոր էջ"
   }
 }
