--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -753,5 +753,14 @@
       "success_message": "Регистрация прошла успешно",
       "error_message": "Ошибка регистрации"
     }
+  },
+  "orderSuccess": {
+    "successTitle": "Ваш заказ оформлен!",
+    "orderNumber": "Номер вашего заказа:",
+    "managerWillCall": "Скоро с вами свяжется наш менеджер для подтверждения заказа",
+    "managerWillCallError": "Скоро с вами свяжется наш менеджер для уточнения деталей",
+    "errorTitle": "Упс, что-то пошло не так",
+    "ordersBtn": "Заказы",
+    "homeBtn": "Перейти на главную"
   }
 }
